<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">短信轰炸机</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text01">输入人渣号码</string>
    <string name="text02">输入短信内容</string>
    <string name="button01">开始轰炸</string>
    <string name="success">发送成功</string>
    <string name="clear">清屏</string>
    <string name="fireup">开始轰炸</string>
    <string name="main_title">冤冤相报何时了</string>
    <string name="password">轰炸次数（默认为3次）</string>
    <string name="account">输入人渣手机号码</string>
    <string name="output">输出信息：</string>

</resources>
