<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/login_top_layout"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_alignParentTop="true">

        <TextView
            android:layout_width="110dp"
            android:layout_height="23dp"
            android:layout_centerInParent="true"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/main_title"
            android:textColor="#ffffff"
            android:textSize="17sp"
            android:textStyle="bold" />
        
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/input"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_top_layout"
        android:layout_marginLeft="28.0dip"
        android:layout_marginRight="28.0dip"
        android:layout_marginTop="28.0dip"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/numberet"
            android:layout_width="fill_parent"
            android:layout_height="44.0dip"
            android:background="#00ffffff"
            android:hint="@string/account"
            android:inputType="phone"
            android:maxLength="16"
            android:maxLines="1"
            android:textColor="#ff1d1d1d"
            android:textColorHint="#ff666666"
            android:textSize="16.0sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1.0px"
            android:layout_marginLeft="1.0px"
            android:layout_marginRight="1.0px"
            android:background="#ffc0c3c4" />

        <EditText
            android:id="@+id/times"
            android:layout_width="fill_parent"
            android:layout_height="44.0dip"
            android:background="#00ffffff"
            android:gravity="center_vertical"
            android:hint="@string/password"
            android:inputType="number"
            android:maxLength="16"
            android:maxLines="1"
            android:textColor="#ff1d1d1d"
            android:textColorHint="#ff666666"
            android:textSize="16.0sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input"
        android:layout_marginLeft="28.0dip"
        android:layout_marginRight="28.0dip"
        android:layout_marginTop="12.0dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/fireup"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="5.0dip"
            android:text="@string/fireup"
            android:textColor="#ff333333"
            android:textSize="18.0sp" />

        <Button
            android:id="@+id/clear"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="5.0dip"
            android:text="@string/clear"
            android:textColor="#ff333333"
            android:textSize="18.0sp" />

    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:background="@drawable/background_login_div"
        android:layout_marginLeft="28.0dip"
        android:layout_marginRight="28.0dip"
        android:layout_marginTop="12.0dip">

        <TextView
            android:id="@+id/console"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textSize="16.0sp"
            android:text="@string/output" />
    </ScrollView>

</RelativeLayout>